# gl-engine

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  appicon.aps  imgui.ini  vcpkg.json
include/glad/: glad.h
resources/objects/elf/: license.txt  scene.gltf
resources/objects/revolver/: license.txt  scene.gltf
shaders/: model.fs  model.vs
shaders/aliasing/: fxaa.fs
shaders/aliasing/smaa/: smaaEdges.fs  smaaEdges.vs  smaaWeights.fs  smaaWeights.vs
shaders/aliasing/taa/: taaGbuffer.fs  taaGbuffer.vs  taaHistory.fs  taaResolve.fs
shaders/clouds/: textureView.fs  volume.frag  volume.vert  worleyNoise.comp
shaders/clustered/: clusterLights.comp  lighting.fs  lighting.vs  pbr.fs  tileCreate.comp
shaders/compute/: basic.glsl
shaders/coneTracing/: colorPass.fs  colorPass.vs  voxel.fs  voxel.gs  voxel.vs
shaders/deferred/: lighting.fs  lighting.vs
shaders/indirect/: simple.frag  simple.vert
shaders/pbr/: basicFragment.glsl  basicVertex.glsl
shaders/shadowPoints/: model.fs  model.vs
shaders/shadows/: map.vs  render.fs  render.vs
shaders/ssr/: finalPassF.glsl  ssrF.glsl
src/: CMakeLists.txt  main.cpp
src/core/: application.cpp  application.h
src/engine/: cloud_eng.cpp  cloud_eng.h  gl_base_engine.cpp  gl_base_engine.h  gl_clustered_engine.cpp  gl_clustered_engine.h  gl_compute_eng.cpp  gl_compute_eng.h  gl_deferred_eng.cpp  gl_deferred_eng.h  gl_engine.cpp  gl_engine.h  gl_funcs.cpp  gl_funcs.h  gl_indirect_eng.cpp  gl_indirect_eng.h  gl_pbr_engine.cpp  gl_pbr_engine.h  gl_physics.cpp  gl_physics.h  gl_voxel_eng.cpp  gl_voxel_eng.h
src/exes/: cloudDemo.cpp  clusteredDemo.cpp  computeDemo.cpp  deferredDemo.cpp  indirectDemo.cpp  pbrDemo.cpp  voxelDemo.cpp
src/ui/: editor.cpp  editor.h  ui.h
src/utils/: camera.cpp  camera.h  gl_compute.cpp  gl_funcs.cpp  gl_funcs.h  gl_model.cpp  gl_model.h  gl_types.h  material.h  mesh.cpp  mesh.h  model.cpp  model.h
